# FTIP

./: LICENSE  README.md  extract_atom_FPS.py  extract_atom_FPS_EM.py  extract_atom_kmean.py
protein_registration_version1.2/protein_registration/: CMakeLists.txt  config.txt  main.cpp  readme.txt
protein_registration_version1.2/protein_registration/src/: DelaunayWrapper.cpp  DelaunayWrapper.h  SSD_sort.h  ThreadPool.h  configuration.cpp  configuration.h  dSSD_sort.h  file_IO.cpp  file_IO.h  hungarian_algorithm.cpp  hungarian_algorithm.h  main.cpp
protein_registration_version1.2/protein_registration/test/: dSSD_test.cpp  icp_scale_test.cpp  simulation.cpp
test_surface/: 1a2pC-surf.asa  1a2pC.x3d  1a5vA-surf.asa
